README and install script updated

--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,34 @@
 # add this to nrm_app/.env
 
 # ODK setup
-ODK_USERNAME=xxx
-ODK_PASSWORD=xxx
+ODK_USERNAME=xxxxxxx
+ODK_PASSWORD=xxxxxxx
 
-# DB setup
-DB_NAME=xxx
-DB_USER=xxx
-DB_PASSWORD=xxx
+# postgres connection
+DB_NAME=xxxxxxx
+DB_USER=xxxxxxx
+DB_PASSWORD=xxxxxxx
 
-USERNAME_GESDISC=xxx
-PASSWORD_GESDISC=xxx
+# Django settings
+DEBUG=xxxxxxx
+SECRET_KEY=xxxxxxx
 
-EMAIL_HOST_USER=xxx
-EMAIL_HOST_PASSWORD=xxx
+USERNAME_GESDISC=xxxxxxx
+PASSWORD_GESDISC=xxxxxxx
 
-GEOSERVER_URL=xxx
-GEOSERVER_USERNAME=xxx
-GEOSERVER_PASSWORD=xxx
+EMAIL_HOST_USER=xxxxxxx
+EMAIL_HOST_PASSWORD=xxxxxxx
 
-EARTH_DATA_USER=xxx
-EARTH_DATA_PASSWORD=xxx
+GEOSERVER_URL=xxxxxxx
+GEOSERVER_USERNAME=xxxxxxx
+GEOSERVER_PASSWORD=xxxxxxx
 
-GEE_SERVICE_ACCOUNT_KEY_PATH=data/xxx.json
-GEE_SERVICE_ACCOUNT_KEY_NRM_WORK_PATH=data/xxx.json
+EARTH_DATA_USER=xxxxxxx
+EARTH_DATA_PASSWORD=xxxxxxx
+
+OVERPASS_URL=xxxxxxx
+EXCEL_DIR=xxxxxxx
+
+GEE_SERVICE_ACCOUNT_KEY_PATH=xxxxxxx
+GEE_HELPER_SERVICE_ACCOUNT_KEY_PATH=xxxxxxx
+GEE_SERVICE_ACCOUNT_KEY_NRM_WORK_PATH=xxxxxxx
