--- a/.env.example
+++ b/.env.example
@@ -16,19 +16,25 @@ SECRET_KEY=xxxxxxx
 USERNAME_GESDISC=xxxxxxx
 PASSWORD_GESDISC=xxxxxxx
 
+# Email config
 EMAIL_HOST_USER=xxxxxxx
 EMAIL_HOST_PASSWORD=xxxxxxx
 
+# GeoServer config
 GEOSERVER_URL=xxxxxxx
 GEOSERVER_USERNAME=xxxxxxx
 GEOSERVER_PASSWORD=xxxxxxx
 
+# EarthData config
 EARTH_DATA_USER=xxxxxxx
 EARTH_DATA_PASSWORD=xxxxxxx
 
-OVERPASS_URL=xxxxxxx
-EXCEL_DIR=xxxxxxx
-
+# Google Earth Engine config
 GEE_SERVICE_ACCOUNT_KEY_PATH=xxxxxxx
 GEE_HELPER_SERVICE_ACCOUNT_KEY_PATH=xxxxxxx
 GEE_SERVICE_ACCOUNT_KEY_NRM_WORK_PATH=xxxxxxx
+
+# Misc
+OVERPASS_URL=xxxxxxx
+EXCEL_DIR=xxxxxxx
+EXCEL_PATH=xxxxxxx
