env example updated

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@
 ODK_USERNAME=xxxxxxx
 ODK_PASSWORD=xxxxxxx
 
+# Offline ODK Sync
+ODK_USER_EMAIL_SYNC=xxxxxxx
+ODK_USER_PASSWORD_SYNC=xxxxxxx
+
 # postgres connection
 DB_NAME=xxxxxxx
 DB_USER=xxxxxxx
