--- a/environment.yml
+++ b/environment.yml
@@ -377,3 +377,5 @@ dependencies:
       - vine==1.3.0
       - websocket-client==1.8.0
       - wsproto==1.2.0
+      - rabbitmq==0.2.0
+      - rabbitmq-server==0.0.1
