--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,5 @@ GEE_SERVICE_ACCOUNT_KEY_NRM_WORK_PATH=xxxxxxx
 OVERPASS_URL=xxxxxxx
 EXCEL_DIR=xxxxxxx
 EXCEL_PATH=xxxxxxx
+
+LOCAL_COMPUTE_API_URL=xxxxx
