--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,7 @@ EARTH_DATA_PASSWORD=xxxxxxx
 GEE_SERVICE_ACCOUNT_KEY_PATH=xxxxxxx
 GEE_HELPER_SERVICE_ACCOUNT_KEY_PATH=xxxxxxx
 GEE_SERVICE_ACCOUNT_KEY_NRM_WORK_PATH=xxxxxxx
+GEE_DATASETS_SERVICE_ACCOUNT_KEY_PATH=xxxx
 
 # Misc
 OVERPASS_URL=xxxxxxx
