--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,11 @@ EXCEL_PATH=xxxxxxx
 
 LOCAL_COMPUTE_API_URL=xxxxx
 NREGA_BUCKET=xxxxx
+
+S3_BUCKET=xxxxx
+S3_REGION=xxxxx
+AUTH_TOKEN_360=xxxxx
+ES_AUTH=xxxxx
+CALL_PATCH_API_KEY=xxxxx
+COMMUNITY_ENGAGEMENT_API_URL=xxxxxxxx
+WHATSAPP_MEDIA_PATH=xxxxxx
