--- a/environment.yml
+++ b/environment.yml
@@ -380,3 +380,5 @@ dependencies:
       - rabbitmq==0.2.0
       - rabbitmq-server==0.0.1
       - djangorestframework-api-key
+      - SpeechRecognition
+      - emoji
