gee_accounts fix

--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,7 @@ GEE_SERVICE_ACCOUNT_KEY_PATH=xxxxxxx
 GEE_HELPER_SERVICE_ACCOUNT_KEY_PATH=xxxxxxx
 GEE_SERVICE_ACCOUNT_KEY_NRM_WORK_PATH=xxxxxxx
 GEE_DATASETS_SERVICE_ACCOUNT_KEY_PATH=xxxx
+FERNET_KEY=xxx
 
 # Misc
 OVERPASS_URL=xxxxxxx
