--- a/environment.yml
+++ b/environment.yml
@@ -77,6 +77,7 @@ dependencies:
     - gdal=3.6.2
     - geetools=1.15.0
     - geojson=3.2.0
+    - geemap
     - geopandas=1.0.1
     - geopandas-base=1.0.1
     - geos=3.11.1
