--- a/installation/environment.yml
+++ b/installation/environment.yml
@@ -351,6 +351,8 @@ dependencies:
     - zipp=3.21.0
     - zlib=1.2.13
     - zstd=1.5.6
+    - geemap
+
     - pip:
           - annotated-types==0.7.0
           - anyio==4.9.0
