--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,6 @@ projects/migrations/*.py
 public_api/migrations/*.py
 stats_generator/migrations/*.py
 users/migrations/*.py
+
+*/migrations/*.py
+*/migrations/__pycache__/
