--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,56 @@
 # add this to nrm_app/.env
 
 # ODK setup
-ODK_USERNAME=xxx
-ODK_PASSWORD=xxx
+ODK_USERNAME=xxxxxxx
+ODK_PASSWORD=xxxxxxx
 
-# DB setup
-DB_NAME=xxx
-DB_USER=xxx
-DB_PASSWORD=xxx
+# Offline ODK Sync
+ODK_USER_EMAIL_SYNC=xxxxxxx
+ODK_USER_PASSWORD_SYNC=xxxxxxx
 
-USERNAME_GESDISC=xxx
-PASSWORD_GESDISC=xxx
+# postgres connection
+DB_NAME=xxxxxxx
+DB_USER=xxxxxxx
+DB_PASSWORD=xxxxxxx
 
-EMAIL_HOST_USER=xxx
-EMAIL_HOST_PASSWORD=xxx
+# Django settings
+DEBUG=xxxxxxx
+SECRET_KEY=xxxxxxx
 
-GEOSERVER_URL=xxx
-GEOSERVER_USERNAME=xxx
-GEOSERVER_PASSWORD=xxx
+USERNAME_GESDISC=xxxxxxx
+PASSWORD_GESDISC=xxxxxxx
 
-EARTH_DATA_USER=xxx
-EARTH_DATA_PASSWORD=xxx
+# Email config
+EMAIL_HOST_USER=xxxxxxx
+EMAIL_HOST_PASSWORD=xxxxxxx
 
-GEE_SERVICE_ACCOUNT_KEY_PATH=data/xxx.json
-GEE_SERVICE_ACCOUNT_KEY_NRM_WORK_PATH=data/xxx.json
+# GeoServer config
+GEOSERVER_URL=xxxxxxx
+GEOSERVER_USERNAME=xxxxxxx
+GEOSERVER_PASSWORD=xxxxxxx
+
+# EarthData config
+EARTH_DATA_USER=xxxxxxx
+EARTH_DATA_PASSWORD=xxxxxxx
+
+# Google Earth Engine config
+GEE_SERVICE_ACCOUNT_KEY_PATH=xxxxxxx
+GEE_HELPER_SERVICE_ACCOUNT_KEY_PATH=xxxxxxx
+GEE_SERVICE_ACCOUNT_KEY_NRM_WORK_PATH=xxxxxxx
+GEE_DATASETS_SERVICE_ACCOUNT_KEY_PATH=xxxx
+FERNET_KEY=xxx
+
+# Misc
+OVERPASS_URL=xxxxxxx
+EXCEL_DIR=xxxxxxx
+EXCEL_PATH=xxxxxxx
+
+LOCAL_COMPUTE_API_URL=xxxxx
+NREGA_BUCKET=xxxxx
+
+S3_BUCKET=xxxxx
+S3_REGION=xxxxx
+AUTH_TOKEN_360=xxxxx
+ES_AUTH=xxxxx
+CALL_PATCH_API_KEY=xxxxx
+COMMUNITY_ENGAGEMENT_API_URL=xxxxxxxx
