--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,23 @@ ENV/
 .venv
 env.bak/
 venv.bak/
+
+# ignored apps
+dashboard/
+
+#ignore migrations
+bot_interface/migrations/*.py
+community_engagement/migrations/*.py
+computing/migrations/*.py
+dpr/migrations/*.py
+geoadmin/migrations/*.py
+organization/migrations/*.py
+plans/migrations/*.py
+plantations/migrations/*.py
+projects/migrations/*.py
+public_api/migrations/*.py
+stats_generator/migrations/*.py
+users/migrations/*.py
+
+*/migrations/*.py
+*/migrations/__pycache__/
