changes for workspace

--- a/.env.example
+++ b/.env.example
@@ -54,3 +54,7 @@ AUTH_TOKEN_360=xxxxx
 ES_AUTH=xxxxx
 CALL_PATCH_API_KEY=xxxxx
 COMMUNITY_ENGAGEMENT_API_URL=xxxxxxxx
+WHATSAPP_MEDIA_PATH=xxxxxxxx
+FERNET_KEY=xxxxxxxx
+TMP_LOCATION=xxxxxxxx
+DEPLOYMENT_DIR=xxxxxxxx
