plan details email

--- a/.env.example
+++ b/.env.example
@@ -56,5 +56,6 @@ CALL_PATCH_API_KEY=xxxxx
 COMMUNITY_ENGAGEMENT_API_URL=xxxxxxxx
 WHATSAPP_MEDIA_PATH=xxxxxxxx
 FERNET_KEY=xxxxxxxx
+PLAN_REPORT_RECIPIENTS=user1@example.com,user2@example.com
 TMP_LOCATION=xxxxxxxx
 DEPLOYMENT_DIR=xxxxxxxx
